회원가입 사용자 전화번호 정보 추가

--- a/src/main/resources/templates/login/lgn.mustache
+++ b/src/main/resources/templates/login/lgn.mustache
@@ -45,6 +45,11 @@
                 <input type="email" placeholder="Email" id="email" alt="이메일" minlength="10" maxlength="50">
             </div>
 
+            <div class="input-group">
+                <i class="fa fa-phone"></i>
+                <input type="text" placeholder="Tel" id="tel" alt="전화번호" minlength="10" maxlength="20">
+            </div>
+
             <button type="button" id="btnJoin"  onclick="joinForm.submitForm()" disabled>Sign Up</button>
         </form>
     </div>
