네비게이션 분리

--- a/src/main/resources/templates/index/index.mustache
+++ b/src/main/resources/templates/index/index.mustache
@@ -1,14 +1,5 @@
 {{>layouts/header1}}
-<link href="/css/index.css" rel="stylesheet"/>
-<!-- 상단 네비게이션 바 -->
-<div class="navbar">
-    <div class="logo">
-        <h5 class="card-title">Index Page</h5>
-    </div>
-    <div class="nav-buttons" id="nav-buttons">
-        <!-- 여기 버튼들은 JS에서 동적으로 설정됩니다 -->
-    </div>
-</div>
+{{>layouts/navigation}}
 
 <!-- 중앙에 콘텐츠를 위한 공간 -->
 <div class="content">
