--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,106 +1,3 @@
 body {
-    background-color: #1d2063;
-}
-
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background-color: #2f3461;
-    color: white;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 80px;
-    z-index: 1000; /* 상단에 고정 */
-}
-
-.nav-buttons {
-    display: flex; /* 플렉스 박스 사용 */
-    align-items: center; /* 수직 중앙 정렬 */
-    gap: 10px; /* 버튼과 텍스트 사이의 간격 */
-}
-
-.nav-buttons span {
-    font-size: 16px; /* 텍스트 크기 설정 */
-    vertical-align: middle; /* 텍스트가 수직 중앙에 위치하게 설정 */
-}
-
-.nav-buttons button {
-    vertical-align: middle; /* 버튼이 수직 중앙에 위치하게 설정 */
-    padding: 8px 16px; /* 버튼의 안쪽 여백을 조정하여 높이 맞추기 */
-    border-radius: 50px; /* 둥근 모서리 */
-    font-size: 14px; /* 버튼 텍스트 크기 */
-}
-
-.navbar .nav-buttons button {
-    border-radius: 20px;
-    background-color: white;
-    color: #f82363;
-    border: none;
-    padding: 5px 15px;
-    cursor: pointer;
-    font-size: 16px;
-    text-transform: uppercase;
-}
-
-.navbar .nav-buttons button:hover {
-    background-color: #f82363;
-    color: white;
-}
-
-.content {
-    margin-top: 100px; /* 상단바에 가려지지 않도록 여백 설정 */
-    padding: 20px;
-    text-align: center;
-    color: white;
-}
-
-.formContainer .signin {
-    position: relative;
-    top: 0;
-    transition: all ease 0.5s;
-}
-
-#content p {
-    color: white;  /* 글자색을 흰색으로 설정 */
-    font-size: 20px;
-}
-
-h5.card-title {
-    color: white;  /* 제목을 흰색으로 설정 */
-    font-size: 24px;
-    margin-top: 20px;
-}
-
-#content button {
-    border-radius: 50px;
-    font-size: 16px;
-    padding: 10px;
-    margin-top: 10px;
-    width: 100%;
-}
-
-.btn-primary {
-    background-color: white;
-    color: #f82363;
-    border: none;
-}
-
-.btn-secondary {
-    background-color: #333aa5;
-    color: white;
-    border: none;
-}
-
-.btn-success {
-    background-color: #28a745;
-    color: white;
-}
-
-.btn-warning {
-    background-color: #ffc107;
-    color: black;
+    background-color: #c9c7c7;
 }
