navigation 분리 생성

--- a/src/main/resources/templates/index/mypage.mustache
+++ b/src/main/resources/templates/index/mypage.mustache
@@ -12,5 +12,5 @@
 
 {{>utility/toast}}
 <!-- 스크립트 로드 -->
-<script src="/js/app/index.js"></script>
+<script src="/js/app/mypage.js"></script>
 {{>layouts/footer1}}
