--- a/src/main/resources/templates/layouts/navigation.mustache
+++ b/src/main/resources/templates/layouts/navigation.mustache
@@ -1,4 +1,4 @@
-<link href="/css/index.css" rel="stylesheet"/>
+<link href="/css/navigation.css" rel="stylesheet"/>
 <!-- 상단 네비게이션 바 -->
 <header class="navbar">
     <div class="logo">
@@ -16,3 +16,4 @@
         <!-- 여기 버튼들은 JS에서 동적으로 설정됩니다 -->
     </div>
 </header>
+<script src="/js/app/navigation.js"></script>
