common js, css 테마 적용

--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -1,4 +1,30 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500');
+/* 기본 라이트 테마 */
+:root {
+    --background-color: #F7E1D7;
+    --text-color: #000000;
+    --button-background: #4A5759;
+    --button-text-color: #d9d6d6;
+    --nav-background: #DEDBD2;
+}
+
+/* 다크 테마 */
+[data-theme="dark"] {
+    --background-color: #1d2063;
+    --text-color: #ffffff;
+    --button-background: #ffffff;
+    --button-text-color: #f82363;
+    --nav-background: #2f3461;
+}
+
+
 body {
-    background-color: #1d2063;
+    background-color: var(--background-color);
+}
+
+.content {
+    margin-top: 100px; /* 상단바에 가려지지 않도록 여백 설정 */
+    padding: 20px;
+    text-align: center;
+    color: var(--text-color);
 }
