--- a/src/main/resources/templates/layouts/navigation.mustache
+++ b/src/main/resources/templates/layouts/navigation.mustache
@@ -1,7 +1,7 @@
 <link href="/css/navigation.css" rel="stylesheet"/>
 <!-- 상단 네비게이션 바 -->
 <header class="navbar">
-    <div class="logo">
+    <div class="mainLogo">
         <a href="/">
             <svg xmlns="http://www.w3.org/2000/svg" version="1.0" width="70" height="50" viewBox="0 0 375.000000 336.000000" preserveAspectRatio="xMidYMid meet">
                 <g transform="translate(0.000000,336.000000) scale(0.100000,-0.100000)" fill="#000000" stroke="none">
