--- a/src/main/resources/templates/login/lgn.mustache
+++ b/src/main/resources/templates/login/lgn.mustache
@@ -1,5 +1,16 @@
 {{>layouts/header1}}
 <link href="/css/lgn.css" rel="stylesheet" />
+<div class="mainLogo">
+    <a href="/">
+        <svg xmlns="http://www.w3.org/2000/svg" version="1.0" width="70" height="50" viewBox="0 0 375.000000 336.000000" preserveAspectRatio="xMidYMid meet">
+            <g transform="translate(0.000000,336.000000) scale(0.100000,-0.100000)" fill="#000000" stroke="none">
+                <path d="M1374 2708 c-32 -68 -84 -172 -115 -233 -31 -60 -135 -263 -231 -450 -97 -187 -288 -565 -426 -840 -138 -276 -278 -542 -311 -593 -34 -51 -61 -95 -61 -97 0 -3 74 -5 164 -5 l164 0 140 268 c77 147 211 411 299 587 87 176 206 408 263 515 131 246 350 694 350 717 0 25 -99 215 -122 236 -41 35 -53 24 -114 -105z"/>
+                <path d="M1600 2815 c0 -5 11 -32 25 -58 14 -26 39 -87 56 -135 17 -48 76 -179 131 -292 126 -256 319 -662 321 -675 1 -6 -156 -12 -447 -15 l-450 -5 -35 -80 c-20 -44 -51 -105 -68 -135 -18 -30 -33 -57 -33 -60 0 -6 1482 -1 1488 4 2 2 -68 145 -155 318 -88 172 -194 385 -235 473 -89 187 -293 609 -311 643 -12 23 -16 24 -149 26 -90 1 -138 -2 -138 -9z"/>
+                <path d="M3093 1970 c-1 -601 -5 -856 -13 -897 -26 -125 -98 -225 -195 -274 -42 -20 -65 -24 -140 -24 -166 0 -274 56 -358 185 -28 44 -58 80 -67 80 -14 0 -132 -118 -171 -171 l-18 -26 69 -80 c113 -130 224 -202 375 -244 85 -23 201 -27 280 -9 65 15 177 69 240 117 74 57 140 145 181 242 65 156 65 142 62 1086 l-3 850 -120 3 -121 3 -1 -841z"/>
+            </g>
+        </svg>
+    </a>
+</div>
 <div class="formContainer">
     <div class="signin">
         <form id="loginForm">
