--- a/src/main/resources/templates/login/lgn.mustache
+++ b/src/main/resources/templates/login/lgn.mustache
@@ -11,6 +11,7 @@
         </svg>
     </a>
 </div>
+<button type="button" class="thema_btn btn" onclick="thema.toggle()">테마</button>
 <div class="formContainer">
     <div class="signin">
         <form id="loginForm">
