--- a/src/main/resources/templates/index/mypage.mustache
+++ b/src/main/resources/templates/index/mypage.mustache
@@ -1,12 +1,26 @@
 {{>layouts/header1}}
+<link href="/css/mypage.css" rel="stylesheet" />
 {{>layouts/navigation}}
 
-<!-- 중앙에 콘텐츠를 위한 공간 -->
-<div class="content">
-    <h1>Welcome to the Index Page</h1>
-    <p>여기에 중앙 컨텐츠가 들어갈 수 있습니다.</p>
-    <div id="content">
-        <!-- 로그인 체크 및 타이머 등 동적으로 추가될 내용 -->
+<!-- 레이아웃을 위한 컨테이너 -->
+<div class="page-container">
+    <!-- 세로 메뉴바 -->
+    <aside class="sidebar">
+        <ul class="menu-list">
+            <li class="menu-item">
+                <a href="#">회원정보 수정</a>
+            </li>
+            <!-- 다른 메뉴들도 여기에 추가 가능 -->
+        </ul>
+    </aside>
+
+    <!-- 중앙에 콘텐츠를 위한 공간 -->
+    <div class="content">
+        <h1>Welcome to the MyPage</h1>
+        <p>여기에 중앙 컨텐츠가 들어갈 수 있습니다.</p>
+        <div id="content">
+            <!-- 로그인 체크 및 타이머 등 동적으로 추가될 내용 -->
+        </div>
     </div>
 </div>
 
