회원정보 조회 API 적용

--- a/src/main/resources/templates/index/mypage.mustache
+++ b/src/main/resources/templates/index/mypage.mustache
@@ -8,7 +8,7 @@
     <aside class="sidebar">
         <ul class="menu-list">
             <li class="menu-item">
-                <a href="#">회원정보 수정</a>
+                <a href="#" onclick="userInfo.loadUserInfo()">회원정보 수정</a>
             </li>
             <!-- 다른 메뉴들도 여기에 추가 가능 -->
         </ul>
@@ -16,8 +16,6 @@
 
     <!-- 중앙에 콘텐츠를 위한 공간 -->
     <div class="content">
-        <h1>Welcome to the MyPage</h1>
-        <p>여기에 중앙 컨텐츠가 들어갈 수 있습니다.</p>
         <div id="content">
             <!-- 로그인 체크 및 타이머 등 동적으로 추가될 내용 -->
         </div>
