--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -38,3 +38,30 @@
     padding: 20px;
     margin-left: 200px; /* 세로 메뉴바의 너비만큼 중앙 콘텐츠를 왼쪽으로 밀기 */
 }
+
+ .popup {
+     display: none;
+     position: fixed;
+     z-index: 9;
+     left: 0;
+     top: 0;
+     width: 100%;
+     height: 100%;
+     background-color: rgba(0, 0, 0, 0.5);
+ }
+
+.popup-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 300px;
+    border-radius: 8px;
+    text-align: center;
+}
+
+.close-btn {
+    float: right;
+    font-size: 25px;
+    cursor: pointer;
+}
