이전 토스트 주석

--- a/src/main/resources/templates/utility/toast.mustache
+++ b/src/main/resources/templates/utility/toast.mustache
@@ -1,14 +1,14 @@
-<!-- Toast 컴포넌트 추가 -->
-<div class="toast-container position-fixed top-0 end-0 p-3">
-    <div id="customToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="toast-header">
-            <strong class="me-auto">알림</strong>
-            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-        </div>
-        <div class="toast-body" id="toastMessage">
-            <!-- 오류 메시지가 여기에 표시됩니다 -->
-        </div>
-    </div>
-</div>
+<!--&lt;!&ndash; Toast 컴포넌트 추가 &ndash;&gt;-->
+<!--<div class="toast-container position-fixed top-0 end-0 p-3">-->
+<!--    <div id="customToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">-->
+<!--        <div class="toast-header">-->
+<!--            <strong class="me-auto">알림</strong>-->
+<!--            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>-->
+<!--        </div>-->
+<!--        <div class="toast-body" id="toastMessage">-->
+<!--            &lt;!&ndash; 오류 메시지가 여기에 표시됩니다 &ndash;&gt;-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
 <script src="/js/utility/toast.js"></script>
