마이페이지 a href="#" javascript:void(0); 샵떼기 변경

--- a/src/main/resources/templates/index/mypage.mustache
+++ b/src/main/resources/templates/index/mypage.mustache
@@ -8,7 +8,7 @@
     <aside class="sidebar">
         <ul class="menu-list">
             <li class="menu-item">
-                <a href="#" onclick="userInfo.loadUserInfo()">회원정보 수정</a>
+                <a href="javascript:void(0);" onclick="userInfo.loadUserInfo()">회원정보 수정</a>
             </li>
             <!-- 다른 메뉴들도 여기에 추가 가능 -->
         </ul>
