마이페이지에서 비밀번호 변경 버튼 css class 수정 변경

--- a/src/main/resources/templates/index/mypage.mustache
+++ b/src/main/resources/templates/index/mypage.mustache
@@ -40,7 +40,7 @@
                 <label for="confirmNewPassword">새 비밀번호 확인</label>
                 <input type="password" id="confirmNewPassword" class="form-control" required />
             </div>
-            <button type="button" class="btn btn-primary" onclick="submitPasswordChange()">비밀번호 변경</button>
+            <button type="button" class="btn btn-secondary mt-2" onclick="submitPasswordChange()">비밀번호 변경</button>
         </form>
     </div>
 </div>
